--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # Replace with your actual Render Postgres DATABASE_URL and a secret code
-DATABASE_URL=postgresql://your_user:your_pass@your_host:5432/your_db
+DATABASE_URL=postgresql://smp_election_user:owner@dpg-d3406sbipnbc73ec1ujg-a:5432/smp_election
 PORT=3000
 SECRET_CODE=ChangeThisSecret123
