--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # Replace with your actual Render Postgres DATABASE_URL and a secret code
-DATABASE_URL=postgresql://smp_election_user:owner@dpg-d3406sbipnbc73ec1ujg-a:5432/smp_election
+DATABASE_URL=postgresql://smp_election_user:FrKbsdeO2ioqP4cbjBrRszCO9XSLmPpV@dpg-d3406sbipnbc73ec1ujg-a:5432/smp_election
 PORT=3000
 SECRET_CODE=ChangeThisSecret123
