--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # Replace with your actual Render Postgres DATABASE_URL and a secret code
-DATABASE_URL=postgresql://smp_election_user:FrKbsdeO2ioqP4cbjBrRszCO9XSLmPpV@dpg-d3406sbipnbc73ec1ujg-a:5432/smp_election
+DATABASE_URL=postgresql://smp_election1_user:ioi07oULt3EYTaenF4dhLyqs8zSlLDd1@dpg-d34dqnruibrs73aej9n0-a:5432/smp_election1
 PORT=3000
 SECRET_CODE=ChangeThisSecret123
